exports[`<SolutionsCategoryTemplate /> render matches snapshot with zero, one and many cards 1`] = `
<article
  id="solutions-category-page">
  <div
    className="container">
    <section
      className="intro-block">
      <h1
        className="as-h2 centered">
        match
      </h1>
    </section>
    <section
      className="all-cards-wrapper text-center">
      <nav
        className="center-block" />
    </section>
  </div>
</article>
`;

exports[`<SolutionsCategoryTemplate /> render matches snapshot with zero, one and many cards 2`] = `
<article
  id="solutions-category-page">
  <div
    className="container">
    <section
      className="intro-block">
      <h1
        className="as-h2 centered">
        match
      </h1>
    </section>
    <section
      className="all-cards-wrapper text-center">
      <nav
        className="center-block">
        <div
          className="col-xs-12 col-sm-6 col-md-6 col-lg-4 solutions-card">
          <div
            className="card-wrapper has-shadow">
            <a
              href="undefined/undefined"
              onClick={[Function anonymous]}>
              <div
                className="card-img-wrapper">
                <img
                  alt="title"
                  src="url" />
              </div>
              <div
                className="card-contents-wrapper">
                <h3
                  className="card-title"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "title"
                    }
                  } />
                <div
                  className="card-desc"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "description"
                    }
                  } />
              </div>
              <div
                className="learn-more">
                Learn More
                <i
                  aria-hidden="true"
                  className="icon-arrowRight" />
              </div>
            </a>
          </div>
        </div>
      </nav>
    </section>
  </div>
</article>
`;

exports[`<SolutionsCategoryTemplate /> render matches snapshot with zero, one and many cards 3`] = `
<article
  id="solutions-category-page">
  <div
    className="container">
    <section
      className="intro-block">
      <h1
        className="as-h2 centered">
        match
      </h1>
    </section>
    <section
      className="all-cards-wrapper text-center">
      <nav
        className="center-block">
        <div
          className="col-xs-12 col-sm-6 col-md-6 col-lg-4 solutions-card">
          <div
            className="card-wrapper has-shadow">
            <a
              href="undefined/undefined"
              onClick={[Function anonymous]}>
              <div
                className="card-img-wrapper">
                <img
                  alt="title"
                  src="url" />
              </div>
              <div
                className="card-contents-wrapper">
                <h3
                  className="card-title"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "title"
                    }
                  } />
                <div
                  className="card-desc"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "description"
                    }
                  } />
              </div>
              <div
                className="learn-more">
                Learn More
                <i
                  aria-hidden="true"
                  className="icon-arrowRight" />
              </div>
            </a>
          </div>
        </div>
      </nav>
    </section>
  </div>
</article>
`;
